LWCQuickStart/force-app/main/default/objects/Invoice__c/listViews/AV_Equipments.listView-meta.xml
<ListView>
    <fullName>AV_Equipments</fullName>
    <columns>Item_Name__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Item_Type__c</field>
        <operation>equals</operation>
        <value>AV Equipment</value>
    </filters>
    <label>AV Equipments</label>
</ListView>