LWCQuickStart/force-app/main/default/objects/Invoice__c/listViews/Awaiting_Delivery.listView-meta.xml
<ListView>
    <fullName>Awaiting_Delivery</fullName>
    <columns>Item_Name__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Ordered,In Transit</value>
    </filters>
    <label>Awaiting Delivery</label>
</ListView>