LWCQuickStart/force-app/main/default/objects/Invoice__c/listViews/Awaiting_Processing.listView-meta.xml
<ListView>
    <fullName>Awaiting_Processing</fullName>
    <columns>Item_Name__c</columns>
    <columns>NAME</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>Item_Type__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Delivered</value>
    </filters>
    <label>Awaiting Processing</label>
</ListView>