LWCQuickStart/force-app/main/default/objects/Invoice__c/listViews/Books.listView-meta.xml
<ListView>
    <fullName>Books</fullName>
    <columns>Item_Name__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Item_Type__c</field>
        <operation>equals</operation>
        <value>Book</value>
    </filters>
    <label>Books</label>
</ListView>