LWCQuickStart/force-app/main/default/objects/Invoice__c/listViews/Books_On_Order.listView-meta.xml
<ListView>
    <fullName>Books_On_Order</fullName>
    <columns>Item_Name__c</columns>
    <columns>NAME</columns>
    <columns>Due_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Item_Type__c</field>
        <operation>equals</operation>
        <value>Book</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Ordered,In Transit</value>
    </filters>
    <label>Books On Order</label>
</ListView>